﻿v1.2.3

New: Ready Check
* New: Lists all Raid/Party members Health and Mana/Power/Energy.
* New: Lists KBM versions for each Raid/Party member (if available.)
* New: Lists Soul Vitality for each Raid/Party member.
* New: Lists Current and Max Planar charges for each Raid/Party member.
* New: Option to disable/enable the display in the options window.
* New: Toggle the display via the slash command /kbmreadycheck.
* New: Staggered KBM Version retrieval if a player's version has not already been cached.
* New: Color added to various states of KBM Version status.
* New: Color added to Soul Vatility display.
* Change: Moved Ready Check window to its own context.

CPU Monitor
* New: Added support for Ready Check CPU tracking.

Tank-Swap
* Fixed: Very rare case where Debuff.remaining could return nil. (Generally due to lag)

Rez Master
* Fixed: Actually applied the fix correctly from the last Revision this time.

Infernal Dawn
* Laethys
** Fixed: Corrected Phase Two Start trigger.
** Change: Added the % (pattern matching escape code) before ? in an attempt to get this to trigger the Phase Two Transition capture.
** Change: Phase 1 objective now reads 51% rather than the incorrect 50%.

Master Mode Caduceus Rise
* Ashcaller Zael
** Fixed: Stopped the smaller Adds from overwriting the bosses UID, enabling the encounter to finally trigger a victory.

Chronicles
* Fixed: Disabled Chronicles will no longer partially initialize, and will instead be completely ignored.

----
v1.2.2

Castbars
* Change: All Boss castbars now inherit the global Style setting (KBM or Rift).

Colors
* New: Added Pink to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* New: Added Dark Grey to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* Change: Purple is now... more purple.

Chat Output
* New: Chat Objects have been added to KBM. These are created and managed in the same way as Alerts, Timers and Mechanic Spies.